# PyNativeGuard

./: .gitingore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
include/pynativeguard/: macros.hpp
include/pynativeguard/core/: event.hpp  profiler.hpp  types.hpp
src/: CMakeLists.txt  hooks.cpp
src/agent/: CMakeLists.txt  dll_main.cpp
src/core/: CMakeLists.txt  profiler.cpp
src/hooks/: CMakeLists.txt  python_api.cpp
test/demo/: demo.py  test_hook.c
tools/: run.py
